Sorta fixed routing issues with new updates

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,8 +49,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/8.4.1/reactstrap.js.map"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/8.4.1/reactstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/8.4.1/reactstrap.min.js.map"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.min.js"></script> -->
 
   </body>
 </html>
